--- a/manifest.json
+++ b/manifest.json
@@ -6,7 +6,8 @@
   "permissions": [
     "storage",
     "contextMenus",
-    "activeTab"
+    "activeTab",
+    "scripting"
   ],
   "action": {
     "default_title": "Open Prompt Drawer"
@@ -14,14 +15,6 @@
   "background": {
     "service_worker": "background.js"
   },
-  "content_scripts": [
-    {
-      "matches": ["<all_urls>"],
-      "js": ["color-schemes.js", "content.js"],
-      "css": ["drawer.css"],
-      "run_at": "document_idle"
-    }
-  ],
   "options_page": "options.html",
   "icons": {
     "16": "icons/icon16.png",
